# django-mptt

./: .editorconfig  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG  CHANGELOG.rst  INSTALL  MANIFEST.in  NOTES  PKG-INFO  README  README.rst  create-release.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codespell_and_ruff.yml  publish.yml  tests.yml
demo_app/: data.db
demo_app/app/: adminx.py  models.py
demo_app/demo/: settings.py
docs/: Makefile  admin.rst  admin.txt  autogenerated.rst  conf.py  forms.rst  forms.txt  index.rst  index.txt  install.rst  install.txt  models.rst  models.txt  mptt.admin.rst  mptt.exceptions.rst  mptt.fields.rst  mptt.forms.rst  mptt.managers.rst  mptt.models.rst  mptt.querysets.rst  mptt.rst  mptt.utils.rst  overview.rst  overview.txt  requirements.txt  technical_details.rst  technical_details.txt  templates.rst  templates.txt  testing.rst  tree_structure.txt  tutorial.rst  upgrade.rst  upgrade.txt  utilities.rst  utilities.txt
mptt/: __init__.py  admin.py  adminx.py  apps.py  compat.py  debug.py  exceptions.py  fields.py  forms.py  managers.py  models.py  queries.py  querysets.py  settings.py  signals.py  utils.py
mptt/libs/: djblets_utils.py
mptt/locale/mn/LC_MESSAGES/: django.po
mptt/locale/nl/LC_MESSAGES/: django.mo  django.po
mptt/locale/pl/LC_MESSAGES/: django.mo  django.po
mptt/locale/ru/LC_MESSAGES/: django.mo  django.po
mptt/locale/zh_Hans/LC_MESSAGES/: django.po
mptt/static/mptt/: draggable-admin.css  draggable-admin.js  jquery-ui-1.10.3.custom.min.js  jquery-ui-1.11.4.custom.min.js  tree_editor.css  tree_editor.js
mptt/templates/admin/: draggable_mptt_change_list.html  grappelli_mptt_change_list.html  grappelli_mptt_change_list_results.html  mptt_change_list.html  mptt_change_list_results.html  tree_editor.html
mptt/templatetags/: mptt_admin.py  mptt_tags.py
mptt/tests/: __init__.py  doctests.py  doctests.txt  models.py  test_runner.py  testcases.py  tests.py
tests/: .coveragerc  .gitignore  manage.py  requirements.txt  runtests.sh  settings.py
tests/myapp/: admin.py  doctests.txt  models.py  test_forms.py  tests.py  urls.py
tests/myapp/fixtures/: categories.json  genres.json  items.json  persons.json  subitems.json  titles.json  unordered_categories.json  unordered_genres.json
