[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-mptt"
dynamic = ["version"]
description = "Utilities for implementing Modified Preorder Tree Traversal with your Django Models and working with trees of Model instances."
readme = "README.rst"
license = {text="MIT-License"}
requires-python = ">=3.9"
authors = [
    { name = "Craig de Stigter", email = "craig.ds@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django-js-asset",
]

[project.optional-dependencies]
tests = [
    "coverage[toml]",
    "mock-django",
]

[project.urls]
Homepage = "https://github.com/django-mptt/django-mptt/"

[tool.hatch.version]
path = "mptt/__init__.py"

[tool.hatch.build]
include = ["/mptt"]

[tool.ruff]
lint.extend-select = ["B", "E", "F", "W", "C90", "I", "UP", "C4", "PIE", "INT", "YTT", "G", "RUF"]
lint.extend-ignore = ["E501", "B018", "B028", "B904", "C901", "RUF001", "RUF012", "UP031"]
fix = true
target-version = "py39"

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.coverage.run]
branch = true
omit = [
    "*migrate*",
    "*migrations*",
    "*venv*",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
