[bumpversion]
current_version = 0.12.0
commit = True
tag = True
tag_name = {new_version}
files = setup.py mptt/__init__.py

[flake8]
exclude = venv,build,docs,.tox,migrations
ignore = E203,E501,W503
max-line-length = 88

[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[isort]
profile = black
combine_as_imports = True
