[metadata]
name = django-mptt
version = 0.13.0
description = Utilities for implementing Modified Preorder Tree Traversal with your Django Models and working with trees of Model instances.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Craig de Stigter
author_email = craig.ds@gmail.com
url = https://github.com/django-mptt/django-mptt/
license = MIT-License
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    django-js-asset
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage
    mock-django

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
exclude = venv,.tox,build,docs
ignore = E501,F841,W503
max-line-length = 88
# max-complexity = 10

[isort]
profile = black
combine_as_imports = True
lines_after_imports = 2

[coverage:run]
branch = True
include =
    *mptt*
omit =
    *migrations*
    *tests*
    *.tox*
