[metadata]
name = django-mptt
version = 0.14.0
description = Utilities for implementing Modified Preorder Tree Traversal with your Django Models and working with trees of Model instances.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Craig de Stigter
author_email = craig.ds@gmail.com
url = https://github.com/django-mptt/django-mptt/
license = MIT-License
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    django-js-asset
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    coverage
    mock-django

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
branch = True
include =
    *mptt*
omit =
    *migrations*
    *tests*
    *.tox*
